Fix preview image covering the project description

--- a/sass/projectCards.sass
+++ b/sass/projectCards.sass
@@ -49,13 +49,13 @@
         max-height: 1000px
         height: 100%
         width: 10em
-        flex: 
+        flex:
             shrink: 0
             grow: 0
         transition: all 1s
         border-radius: 15px
         background: #fafafa
-        box-shadow:  10px 10px 23px #cdcdcd, -10px -10px 23px #ffffff
+        box-shadow: 10px 10px 23px #cdcdcd, -10px -10px 23px #ffffff
         padding: 2em
         // internal
         overflow: hidden
@@ -64,11 +64,15 @@
         align-items: center
         justify-content: space-between
         position: relative
+        h3
+            margin:
+                bottom: calc(min(25vh,12.75em))
         img
             transition: 0.5s all
             position: absolute
-            top: 6em
+            top: 5em
             z-index: 2
+            height: calc(min(25vh,12.75em))
         // closed
         &:not(input:checked + label)
             p, .neu-button
